parser/tests/bad/ref01.st
% identifier 'x' is not declared

var i := j
